--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
+        "admin-lte": "^3.0.4", 
         "@fortawesome/fontawesome-free": "^5.13.0",
-        "admin-lte": "^3.0.4"
+               
+        "vue-router": "^3.1.6"
     }
 }
